Before RECG working

--- a/src/main/resources/assets/fecfs-heroes/lang/en_us.json
+++ b/src/main/resources/assets/fecfs-heroes/lang/en_us.json
@@ -4,8 +4,14 @@
   "sound.fecfs-heroes.batarang_thrown": "Batarang Thrown",
   "sound.fecfs-heroes.explosive_gel_placed": "Explosive Gel Placed",
   "item.fecfs-heroes.batarang": "Batarang",
+  "item.fecfs-heroes.explosive_gel": "Explosive Gel",
+  "item.fecfs-heroes.smoke_pellet": "Smoke Pellet",
+  "item.fecfs-heroes.remote_electrical_charge_gun": "Remote Electrical Charge Gun",
   "itemgroup.batgadgets": "Bat-Gadgets",
   "itemgroup.suits": "Suits",
+  "key.fecfs-heroes.usegadget": "Use Gadget",
+  "key.fecfs-heroes.getequipments": "Get Equipments",
+  "category.fecfsheroes.abilities": "Fecfs-Heroes Abilities",
 
   "item.fecfs-heroes.tb_2022_helmet": "The Batman Helmet",
   "item.fecfs-heroes.tb_2022_chestplate": "The Batman Chestplate",
